src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_120x40_quit-confirmation.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
main [PROD]  ws:default  terraform loading...  /repo/environments/production/main
Unique targets: +2 add  ~2 update  0 replace  -1 destroy
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  # terraform_data.api will be updated in-place                                                                        ▲
  ~ resource "terraform_data" "api" {                                                                                  ┃
      id       = "api-20260920"                                                                                        ┃
      ~ input  = "before" -> "after"                                                                                   ┃
      # (4 unchanged attributes hidden)                                                                                ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.worker must be replaced                                                                             ┃
-/+ resource "terraform_data" "worker" {                                                                               ┃
      ~ input = "worker-before" -> "worker-after" # forces replacement                                                 ┃
      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef"                                       ┃
      + new_checksum = (known after apply)                                                                             ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.old will be destroyed                                                                               ┃
  - resource "terraform_data" "old" {                                                                                  ┃
      id = "old-20260920"                                                                                              ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.new will be created                                                                                 ┃
  + resource "terraform_data" "new" {                                                                                  ┃
      input = "new-value"                                                                                              ┃
      note  = "A deliberately long synthetic value keeps horizontal scrolling visible"                                 ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
Changes to Outputs:                                                                                                    ┃
  + endpoint = (known after apply)                                                                                     ┃
  ~ summary  = "old summary" -> "new summary with a deliberately long value for review"                                ┃
                                                                                                                       ┃
Warning: Value for "pending" is not known until apply                                                                  │
                                                                                                                       │
Plan: 2 to add, 2 to change, 1 to destroy.                                                                             │
                                                                                                                       │
Synthetic review text continues below so the viewport and scrollbar remain meaningful.                                 │
The same long body is intentionally reused across every review state and terminal size.                                ▼
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Quit Terracotta?   [Enter] Quit   [Esc] Cancel
