src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_120x40_search.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---




 Terracotta | main

 ┌Plan | Filter───────────────────────────────────────────────────────────────────────────────────────────────────────┐
 │Filter: /terraform_data   Matches: resources 4/4 | outputs 0/2                                                      │
 │────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
 │  # terraform_data.api will be updated in-place                                                                    ▲│
 │  ~ resource "terraform_data" "api" {                                                                              ┃│
 │      id       = "api-20260920"                                                                                    ┃│
 │      ~ input  = "before" -> "after"                                                                               ┃│
 │      # (4 unchanged attributes hidden)                                                                            ┃│
 │    }                                                                                                              ┃│
 │                                                                                                                   ┃│
 │  # terraform_data.worker must be replaced                                                                         ┃│
 │-/+ resource "terraform_data" "worker" {                                                                           ┃│
 │      ~ input = "worker-before" -> "worker-after" # forces replacement                                             ┃│
 │      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef"                                   ┃│
 │      + new_checksum = (known after apply)                                                                         ┃│
 │    }                                                                                                              ┃│
 │                                                                                                                   ┃│
 │  # terraform_data.old will be destroyed                                                                           ┃│
 │  - resource "terraform_data" "old" {                                                                              ┃│
 │      id = "old-20260920"                                                                                          ││
 │    }                                                                                                              ││
 │                                                                                                                   ││
 │  # terraform_data.new will be created                                                                             ││
 │  + resource "terraform_data" "new" {                                                                              ││
 │      input = "new-value"                                                                                          ││
 │      note  = "A deliberately long synthetic value keeps horizontal scrolling visible"                             ││
 │    }                                                                                                              ││
 │                                                                                                                   ▼│
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Enter confirm | Esc cancel
