src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_160x60_apply-confirmation.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---










 Terracotta | main












                                        ┌──────────────────────────────────────────────────────────────────────────────┐
                                        │                                                                              │
                                        │ Apply this reviewed plan?                                                    │
                                        │                                                                              │
                                        │ Target: /repo/environments/production/main                                   │
                                        │ Workspace: default                                                           │
                                        │ Plan: 2 to add, 2 to change, 1 to destroy.                                   │
                                        │                                                                              │
                                        │ This plan includes resource deletion.                                        │
                                        │                                                                              │
                                        │ Apply this plan? Type yes or no.                                             │
                                        │ > |                                                                          │
                                        │                                                                              │
                                        └──────────────────────────────────────────────────────────────────────────────┘
                                        Enter confirm | Esc back
