src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_160x60_normal-short.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
repo  ws:default  terraform loading...  /repo
Plan: +0 add  ~0 update  0 replace  -0 destroy
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx




















































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
/ filter | ? help | q quit                                                                                                                                   1/3
